[package]
name = "mpdelta_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = { workspace = true }
arrayvec = { workspace = true }
async-trait = { workspace = true }
cgmath = { workspace = true }
dashmap = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_differential = { workspace = true }
once_cell = { workspace = true }
qcell = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
