[package]
name = "mpdelta_renderer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
cgmath = { workspace = true }
crossbeam-utils = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_differential = { workspace = true }
once_cell = { workspace = true }
qcell = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
assert_matches = { workspace = true }
