[package]
name = "mpdelta_renderer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
cgmath = { workspace = true }
crossbeam-utils = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_differential = { workspace = true }
rayon = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
assert_matches = { workspace = true }
mpdelta_core_test_util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
