[package]
name = "mpdelta_rendering_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_renderer = { workspace = true }
