[package]
name = "mpdelta_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpdelta_core = { path = "../mpdelta_core" }
async-trait = "0.1.56"
uuid = { version = "1.0.0", features = ["v1", "fast-rng"] }
time = { version = "0.3.11", features = ["std"] }
tokio = { version = "1.19.2", features = ["full"] }
