[package]
name = "mpdelta_services"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
cgmath = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_differential = { workspace = true }
rpds = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v1", "rng"] }

[dev-dependencies]
mpdelta_core_test_util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
