[package]
name = "mpdelta_video_renderer_vulkano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
cgmath = { workspace = true }
dashmap = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_renderer = { workspace = true }
shader_composite_operation = { path = "shaders/composite_operation" }
shader_texture_drawing = { path = "shaders/texture_drawing" }
tokio = { workspace = true }
vulkano = { workspace = true }

[build-dependencies]
shader_builder = { workspace = true }
