[package]
name = "mpdelta_video_renderer_vulkano"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }


[dependencies]
async-trait = { workspace = true }
cgmath = { workspace = true }
dashmap = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_renderer = { workspace = true }
shader_composite_operation = { path = "shaders/composite_operation" }
shader_texture_drawing = { path = "shaders/texture_drawing" }
smallvec = { workspace = true }
tokio = { workspace = true }
vulkano = { workspace = true }
vulkano-util = { workspace = true }

[build-dependencies]
shader_builder = { workspace = true }

[dev-dependencies]
vulkano-util = { workspace = true }
