[package]
name = "mpdelta_video_renderer_vulkano"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }


[dependencies]
cgmath = { workspace = true }
glam = { workspace = true }
futures = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_renderer = { workspace = true }
shader_composite_operation = { path = "shaders/composite_operation" , version = "*", default-features = false }
shader_texture_drawing = { path = "shaders/texture_drawing" , version = "*", features = ["spirv-std"], default-features = false }
smallvec = { workspace = true }
vulkano = { workspace = true }

[build-dependencies]
shader_builder = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
vulkano-util = { workspace = true }
