[package]
name = "rust_gpu_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu/", rev = "5feee3b701ac1f7960efbdf413b8013038767df3" }
