[package]
name = "rust_gpu_builder"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
# このcrateのコンパイルで利用されるのはnightly-2023-05-27のrustc/cargo(rust-toolchain参照)である
# これはrustc 1.71なので4.5以降のclap(rustc 1.74以降を要求する)だとコンパイルが通らない
# これを回避するため4.5未満を指定する(おそらく4.4.18が使われる)
# そしてこれはこのcrate特有の制約なのでworkspaceには書かない
clap = { version = "<4.5", features = ["derive"] }
spirv-builder = { workspace = true, optional = true }
