[package]
name = "mpdelta_ffmpeg"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bitflags = { workspace = true }
ffmpeg-next = { workspace = true }
ffmpeg-sys-next = { workspace = true }
mpdelta_multimedia = { workspace = true }
thiserror = { workspace = true }
