[package]
name = "mpdelta_component_text_renderer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
crossbeam-queue = { workspace = true }
font-kit = { workspace = true }
glam = { workspace = true }
icu_properties = { workspace = true }
icu_segmenter = { workspace = true }
lyon_tessellation = { workspace = true }
mpdelta_component_common = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
rpds = { workspace = true }
shader_font_rendering = { path = "shader" }
smallvec = { workspace = true }
swash = { workspace = true }
tokio = { workspace = true }
vulkano = { workspace = true }

[build-dependencies]
shader_builder = { workspace = true }

[dev-dependencies]
image = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
vulkano-util = { workspace = true }
