[package]
name = "shader_composite_operation"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
spirv-std = { workspace = true, optional = true }

[features]
shader = ["spirv-std"]
default = ["shader"]

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(target_arch, values("spirv"))'] }
