[package]
name = "composite_operation_shader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu/", rev = "5feee3b701ac1f7960efbdf413b8013038767df3", features = ["glam"], optional = true }

[features]
shader = ["spirv-std"]
default = ["shader"]
