[package]
name = "shader_texture_drawing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bytemuck = { workspace = true }
spirv-std = { workspace = true, optional = true }

[features]
shader = ["spirv-std"]
default = ["shader"]
