[package]
name = "shader_texture_drawing"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bytemuck = { workspace = true }
spirv-std = { workspace = true, optional = true }

[features]
shader = ["spirv-std"]
default = ["shader"]
